fix(importer): keep insertion order in BrClientEntity defensive copies
Map.copyOf's iteration order follows hash spread of the *input* map, so
CODEC-decode (HashMap order) and draft (LinkedHashMap order) sources
produced differently-ordered snapshots, breaking the spec §8.9 invariant.
Use ordered unmodifiable copies instead. Adds a record-constructor
order-preservation regression test (draft-independent) plus text-level
round-trip check.